# wordsmash

./: LICENCE  README.md  pyproject.toml  requirements.txt  setup.cfg
wordsmash/: __main__.py  attacks.py  crawler.py
