[metadata]
name = WordSmash
version = 0.0.1
author = The Archivist
description = "Your WordPress site's best friend"
long_description = file: README.md
long_description_content_type = text/markdown
keywords = wordpress, attack
licence = Zlib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: zlib/libpng License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS

[options]
packages = wordsmash
python_requires = >=3.9
install_requires =
    argparse
    bs4
    dnspython
    requests

[options.entry_points]
console_scripts =
    wordsmash = wordsmash.__main__:main

[flake8]
ignore = E203 W503  # Conflict with black
max-line-length = 160
